Fixed scrollbar issue

--- a/chrome/css/styles.css
+++ b/chrome/css/styles.css
@@ -117,7 +117,7 @@ li .right {
 
 /*Top bar*/
 #navbar {
-  border-top: solid 1px #ccc;
+  border-top: solid 1px #777;
   border-bottom: solid 1px #111;
   position: absolute;
   top: 0;
